--- a/www/index.html
+++ b/www/index.html
@@ -1,42 +1,1 @@
-<!DOCTYPE html>
-<!--
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
-<html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="format-detection" content="telephone=no" />
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Hello World</title>
-    </head>
-    <body>
-        <div class="app">
-            <h1>PhoneGap</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-            </div>
-        </div>
-        <script type="text/javascript" src="phonegap.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript">
-            app.initialize();
-        </script>
-    </body>
-</html>
+<html>  <head>    <meta content="text/html; charset=windows-1252" http-equiv="content-type">    <title>MobileEmpire</title>  </head>  <body>    <center> <img src="TitleLogo.png" alt="alt=" mobile="" empire="" game="" logo""="">      <table bgcolor="#FFFFFF" border="1">        <tbody>          <tr>            <td>A Google account is required to proceed!</td>          </tr>        </tbody>      </table>      <a href="https://gateone.empiredirectory.net"><img src="EnterGame_Button.png"          alt="Enter The Client"></a>      <br>      <a href="http://liftoffsoftware.com"><img src="credits.png" alt="Visit Our Partner Liftoff Software"></a>      <br>      <iframe src="http://empiredirectory.net/mobileempirenews.html" height="100"        width="500"></iframe>      <p><a href="https://empiredirectory.net"><img src="ED_Credits.png" alt="Enter The Client"></a></p>    </center>  </body></html>
